frontend/f

> front@1.0.0 start
> webpack serve --config webpack.dev.config.ts

<i> [webpack-dev-server] Project is running at:
<i> [webpack-dev-server] Loopback: http://localhost:3000/
<i> [webpack-dev-server] On Your Network (IPv4): http://10.18.124.236:3000/
<i> [webpack-dev-server] Content not from webpack is served from '/home/hohayrap/Desktop/ft_transendence/frontend/build' directory
<i> [webpack-dev-server] 404s will fallback to '/index.html'
assets by path assets/ 486 KiB
  assets by path assets/images/ 477 KiB
    assets by path assets/images/*.svg 4.29 KiB
      asset assets/images/profile.svg 3.05 KiB [emitted] [from: src/assets/images/profile.svg] [copied]
      asset assets/images/logohome.svg 1.24 KiB [emitted] [from: src/assets/images/logohome.svg] [copied]
    asset assets/images/pong.jpg 252 KiB [emitted] [from: src/assets/images/pong.jpg] [copied]
    asset assets/images/man.png 221 KiB [emitted] [from: src/assets/images/man.png] [copied]
  asset assets/favicon.ico 6.25 KiB [emitted] [from: src/assets/favicon.ico] [copied]
  asset assets/logo.svg 2.58 KiB [emitted] [from: src/assets/logo.svg] [copied]
asset bundle.js 6.96 MiB [emitted] (name: main)
asset 84b800eadeaa7ca10a05.ico 6.25 KiB [emitted] [immutable] [from: src/assets/favicon.ico]
asset index.html 472 bytes [emitted]
orphan modules 4 MiB [orphan] 2393 modules
runtime modules 30.9 KiB 17 modules
cacheable modules 2.39 MiB
  modules by path ./node_modules/ 2.28 MiB 373 modules
  modules by path ./src/ 114 KiB
    modules by path ./src/components/ 68.5 KiB 18 modules
    modules by path ./src/*.css 42.5 KiB
      ./src/index.css 2.37 KiB [built] [code generated]
      ./node_modules/css-loader/dist/cjs.js!./node_modules/postcss-loader/dist/cjs.js!./src/index.css 35 KiB [built] [code generated]
      ./src/App.css 2.36 KiB [built] [code generated]
      ./node_modules/css-loader/dist/cjs.js!./node_modules/postcss-loader/dist/cjs.js!./src/App.css 2.74 KiB [built] [code generated]
    modules by path ./src/*.tsx 2.69 KiB
      ./src/index.tsx 535 bytes [built] [code generated]
      ./src/App.tsx 2.16 KiB [built] [code generated]

ERROR in ./src/components/Channels.tsx
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /home/hohayrap/Desktop/ft_transendence/frontend/src/components/Channels.tsx: Unexpected token, expected "," (380:0)

  378 | }
  379 |
> 380 | export default ChannelComponent
      | ^
    at instantiate (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:63:32)
    at constructor (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:356:12)
    at TypeScriptParserMixin.raise (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:3240:19)
    at TypeScriptParserMixin.unexpected (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:3270:16)
    at TypeScriptParserMixin.expect (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:3612:28)
    at TypeScriptParserMixin.parseCallExpressionArguments (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:11052:14)
    at TypeScriptParserMixin.parseCoverCallAndAsyncArrowHead (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10981:29)
    at TypeScriptParserMixin.parseSubscript (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10916:19)
    at TypeScriptParserMixin.parseSubscript (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:9211:18)
    at TypeScriptParserMixin.parseSubscripts (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10887:19)
    at TypeScriptParserMixin.parseExprSubscripts (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10878:17)
    at TypeScriptParserMixin.parseUpdate (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10857:21)
    at TypeScriptParserMixin.parseMaybeUnary (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10833:23)
    at TypeScriptParserMixin.parseMaybeUnary (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:9726:18)
    at TypeScriptParserMixin.parseMaybeUnaryOrPrivate (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10671:61)
    at TypeScriptParserMixin.parseExprOps (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10676:23)
    at TypeScriptParserMixin.parseMaybeConditional (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10653:23)
    at TypeScriptParserMixin.parseMaybeAssign (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10614:21)
    at TypeScriptParserMixin.parseMaybeAssign (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:9673:20)
    at TypeScriptParserMixin.parseExpressionBase (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10568:23)
    at /home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10564:39
    at TypeScriptParserMixin.allowInAnd (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:12254:16)
    at TypeScriptParserMixin.parseExpression (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10564:17)
    at TypeScriptParserMixin.parseStatementContent (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:12685:23)
    at TypeScriptParserMixin.parseStatementContent (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:9370:18)
    at TypeScriptParserMixin.parseStatementLike (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:12551:17)
    at TypeScriptParserMixin.parseStatementListItem (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:12531:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:13123:61)
    at TypeScriptParserMixin.parseBlockBody (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:13116:10)
    at TypeScriptParserMixin.parseBlock (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:13104:10)
    at TypeScriptParserMixin.parseFunctionBody (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:11926:24)
    at TypeScriptParserMixin.parseArrowExpression (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:11901:10)
    at TypeScriptParserMixin.parseParenAndDistinguishExpression (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:11504:12)
    at TypeScriptParserMixin.parseExprAtom (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:11143:23)
    at TypeScriptParserMixin.parseExprAtom (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:6977:20)
    at TypeScriptParserMixin.parseExprSubscripts (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10874:23)
    at TypeScriptParserMixin.parseUpdate (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10857:21)
    at TypeScriptParserMixin.parseMaybeUnary (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10833:23)
    at TypeScriptParserMixin.parseMaybeUnary (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:9726:18)
    at TypeScriptParserMixin.parseMaybeUnaryOrPrivate (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10671:61)
    at TypeScriptParserMixin.parseExprOps (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10676:23)
    at TypeScriptParserMixin.parseMaybeConditional (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10653:23)
    at TypeScriptParserMixin.parseMaybeAssign (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10614:21)
    at TypeScriptParserMixin.parseMaybeAssign (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:9673:20)
    at /home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10584:39
    at TypeScriptParserMixin.allowInAnd (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:12254:16)
    at TypeScriptParserMixin.parseMaybeAssignAllowIn (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:10584:17)
    at TypeScriptParserMixin.parseVar (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:13195:91)
    at TypeScriptParserMixin.parseVarStatement (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:13034:10)
    at TypeScriptParserMixin.parseVarStatement (/home/hohayrap/Desktop/ft_transendence/frontend/node_modules/@babel/parser/lib/index.js:9336:31)
 @ ./src/App.tsx 11:0-53 30:46-62
 @ ./src/index.tsx 4:0-24 13:36-39

webpack 5.83.1 compiled with 1 error in 5902 ms
<i> [webpack-dev-server] Gracefully shutting down. To force exit, press ^C again. Please wait...
